envoy-extension/gateway.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyProxy
metadata:
  name: custom-proxy-config
  namespace: envoy-gateway-system
spec:
  provider:
    type: Kubernetes
    kubernetes:
      envoyDeployment:
        container:
          image: envoyproxy/envoy:v1.31-latest
  bootstrap:
    type: Merge 
    value: |
      listeners:
        - name: listener_0
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8080
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: http
                    codec_type: AUTO
                    route_config:
                      name: local_route
                      virtual_hosts:      
                        - name: backend
                          domains: ["*"]
                          routes:
                            - match:
                                prefix: "/m"
                              direct_response:
                                status: 404
                                body:
                                  inline_string: "No matching route found"
                            - match:
                                prefix: "/"
                              route:  
                                cluster: original_destination_cluster
                                timeout: 1000s  # Increase route timeout
                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
        - name: original_destination_cluster
          type: ORIGINAL_DST
          original_dst_lb_config:
            use_http_header: true
            http_header_name: "target-pod"
          connect_timeout: 6s
          lb_policy: CLUSTER_PROVIDED
          dns_lookup_family: V4_ONLY
      # Enable detailed logging
      layered_runtime:
        layers:
          - name: static_layer
            static_layer:
              envoy:
                logging:
                  level: debug

          


---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: genai-inference-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: custom-proxy-config
    namespace: envoy-gateway-system


---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: genai-inference-gateway
spec:
  gatewayClassName: genai-inference-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 8080
